# robot_controller2

./: CMakeLists.txt  README.md  package.xml  robot_controller2.xml
bringup/config/: diffbot_controllers.yaml  ps3.config.yaml
bringup/launch/: diffbot.launch.py  robot_controller2.launch.py  teleop.launch.py
description/ros2_control/: diffbot.ros2_control.xacro
description/urdf/: diffbot.urdf.xacro
hardware/: diffbot_system.cpp  motor.cpp  motor_encoder.cpp  motor_pid.cpp
hardware/include/robot_controller2/: diffbot_system.hpp  motor.hpp  motor_encoder.hpp  motor_pid.hpp
